feat: get list active brand
